[Bug Fixed]: Alignment and Padding Fixed

--- a/app/assets/stylesheets/brands-setting.css
+++ b/app/assets/stylesheets/brands-setting.css
@@ -92,7 +92,7 @@
     margin: 25px 22px;
     background-color: #FFFFFF;
     box-shadow: 1px 1px 3px 2px #ebebeb;
-    padding: 48px 0 69px 36px;
+    padding: 40px 0 69px 36px;
     font-family: 'Hind Regular', sans-serif;
     border-radius: 4px;
 }
